# NBodySolver

./: .gitignore  CMakeLists.txt  README.md  Timeelapsed.txt  animator.py  energy_conservation.py  plotter.py
analyser_scripts/: energy_conservation.py  timeplotter.py
include/: body.h  defines.h  eulerbody.h  ibody.h  leapfrogbody.h  mvector.h  rk4body.h  verletbody.h
include/implementations/: eulerbody.h  leapfrogbody.h  rk4body.h  verletbody.h
include/support/: helper.h  ibody.h  mvector.h
source/: body.cpp  eulerbody.cpp  ibody.cpp  leapfrogbody.cpp  main.cpp  mvector.cpp  rk4body.cpp  verletbody.cpp
source/implementations/: eulerbody.cpp  leapfrogbody.cpp  rk4body.cpp  verletbody.cpp
source/support/: ibody.cpp  mvector.cpp
